fixed header wrap issue

--- a/assets/main-css/style.css
+++ b/assets/main-css/style.css
@@ -12,6 +12,13 @@ header {
   display: flex;
   justify-content: center;
   align-self: center;
+  max-width: 100%;
+
+}
+h1 {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
 .h2-title {
